

2.42.1 - December ??, 2010

    Corrected a bug in the SWI-Prolog "swihooks.lgt" file that resulted in
    a bogus error message about an invalid Logtalk flag when consulting a
    Prolog file when there is a Logtalk source file with the same name in
    the same directory.

    Updated the "problog" example, adding preliminary support for the new
    annotated disjunctions syntax.


2.42.0 - December 1, 2010

    Added an implementation of persistent object flags, contributed by
    Theofrastos Mantadelis.

    Added a new pair of built-in predicates, conforms_to_protocol/2-3,
    implementing the transitive closure of the protocol implementation
    relation.

    Added an experimental directive, annotation/1, for supporting Logtalk
    integration with other languages such as ProbLog and CHR.

    Reverted the changes in the previous release that allowed a stand-alone
    object to (also) be used as root of class hierarchies.

    Defined a set of low-level utility predicates, available as public methods
    from the "logtalk" built-in object. Modified the (virtual) compilation of
    this object in order to always interpret it as a prototype.

    Simplified and improved the performance of the predicate lookup caching
    code, resulting in improved dynamic binding performance. Simplified and
    improved the performance of the built-in methods asserta/1 and assertz/1
    when asserting a clause for a new predicate. Simplified the updating of
    the internal table for dynamically defined predicates when using the
    built-in methods retract/1 and retractall/1. Simplified the compiler
    code used when creating new entities.

    Changed the semantics of the "dynamic_declarations" flag so that it is
    only checked when sending an asserta/1 or assertz/1 message to an object.
    Local asserting of clauses for new predicates is now always allowed.

    Updated the implementation of the built-in method abolish/1 in order to